Bug fix in `Select`

--- a/TestResults/CodeCoverage.html
+++ b/TestResults/CodeCoverage.html
@@ -127,7 +127,7 @@ ul li, ol li {margin: 8pt 3pt;}
 <tr><th>Executed at</th><th>APLVersion</th><th>Memory (MB)</th></tr>
 </thead>
 <tbody>
-<tr><td>2023-08-07 17:39:54</td><td>Windows-64 ⋄ 18.2.47418.0 ⋄ W ⋄ Development ⋄ Unicode</td><td>53</td></tr>
+<tr><td>2023-08-09 13:22:42</td><td>Windows-64 ⋄ 18.2.47418.0 ⋄ W ⋄ Development ⋄ Unicode</td><td>53</td></tr>
 </tbody>
 </table>
 <p>Overall 93% of the testable code is covered.</p>
@@ -142,10 +142,10 @@ ul li, ol li {margin: 8pt 3pt;}
 <tr class="uncovered"><td>#.CommTools.CommTools.Copyright</td><td>1</td><td>0</td><td>1</td></tr>
 <tr class="uncovered"><td>#.CommTools.CommTools.Help</td><td>1</td><td>0</td><td>1</td></tr>
 <tr><td>#.CommTools.CommTools.Pause</td><td>4←≢21,31-33</td><td>83</td><td>24</td></tr>
-<tr><td>#.CommTools.CommTools.AskForNumber</td><td>5←≢49-51,55,60</td><td>88</td><td>43</td></tr>
 <tr><td>#.CommTools.CommTools.AskForText</td><td>35, 48</td><td>94</td><td>35</td></tr>
+<tr><td>#.CommTools.CommTools.AskForNumber</td><td>55, 60</td><td>95</td><td>43</td></tr>
+<tr><td>#.CommTools.CommTools.Select</td><td>4←≢49-50,52-53</td><td>95</td><td>74</td></tr>
 <tr><td>#.CommTools.CommTools.YesOrNo</td><td>22, 63, 66</td><td>96</td><td>67</td></tr>
-<tr><td>#.CommTools.CommTools.Select</td><td>48, 50</td><td>97</td><td>71</td></tr>
 <tr class="fullyCovered"><td>#.CommTools.CommTools.Assert</td><td></td><td>100</td><td>0</td></tr>
 <tr class="fullyCovered"><td>#.CommTools.CommTools.Cleanup</td><td></td><td>100</td><td>5</td></tr>
 <tr class="fullyCovered"><td>#.CommTools.CommTools.ErrNo</td><td></td><td>100</td><td>1</td></tr>
